# ros2_object_tracking

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: bytetrack.yaml  object_tracking.yaml  ocsort.yaml
include/object_tracking/: detection_utils.h  image_utils.h
launch/: object_tracking.launch.py
src/: detection_utils.cpp  image_utils.cpp  object_tracking_node.cpp
